[tool.poetry]
name = "generate-pyrogram-session-string"
version = "0.1.0"
description = "Generate Pyrogram Session String and send it to Saved Messages of your Telegram account"
authors = ["Dash Eclipse <dashezup@disroot.org>"]

[tool.poetry.dependencies]
python = "^3.8"
Pyrogram = "^1.2.5"
TgCrypto = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
